--- a/package.json
+++ b/package.json
@@ -4,7 +4,20 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config ./webpack/webpack.config.prod.js",
-    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js"
+    "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --open"
+  },
+  "dependencies": {
+    "gsap": "^3.10.4",
+    "pixi.js": "^6.5.1"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "webpack-merge": "^5.8.0"
   },
   "keywords": [],
   "author": "",
