--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --config ./webpack/webpack.config.dev.js --open"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "gsap": "^3.10.4",
     "pixi.js": "^6.5.1"
   },
